# avogadrolibs

avogadro/: CMakeLists.txt
avogadro/qtplugins/: CMakeLists.txt
avogadro/qtplugins/mongochem/: CMakeLists.txt  mongochemtreemodel.cpp  mongochemtreemodel.h  mongochemwidget.cpp  mongochemwidget.h  mongochemwidget.ui
avogadro/qtplugins/plotxrd/: CMakeLists.txt  plotxrd.cpp
avogadro/qtplugins/yaehmop/: CMakeLists.txt  banddialog.cpp  banddialog.h  banddialog.ui  yaehmop.cpp  yaehmop.h  yaehmopout.cpp  yaehmopout.h  yaehmopsettings.h
avogadro/vtk/: CMakeLists.txt  vtkplot.cpp  vtkplot.h
cmake/: DownloadYaehmop.cmake
